ingreso de anexos de paginas

--- a/index.htm
+++ b/index.htm
@@ -51,8 +51,8 @@
   <h4 class="text-secondary text-white fs-3">Desarrollador Full Stack</h4>
   <p class="mt-3 text-white fs-4">Actualmente me encuentro estudiando desarrollo web; te invito a ver mis progresos y aprendizajes.</p>
 
-   <button class="btn btn-outline-light me-2">Descargar CV</button>
-      <button class="btn btn-secondary">Contacto</button>
+     <a href="experiencia.html" class="btn btn-outline-light me-2">Experiencia Laboral</a>
+  <a href="contacto.html" class="btn btn-outline-light me-2">Contacto</a>
 </div>
   
 
