se agrega footer

--- a/experiencia.html
+++ b/experiencia.html
@@ -76,6 +76,6 @@ Maquetación para optimización de empresa Hual: Trabajo como diseñador UI.</p>
    
 </main>
 
- 
+ <footer><p>Hecho con ♥ por Estefanía Rodríguez. © 2025 Todos los derechos reservados</p></footer>
   </body>
 </html>
